--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
     function getWeekRange(offsetWeeks) {
       const today = new Date();
       const monday = new Date(today);
-      monday.setDate(monday.getDate() - (monday.getDay() + 6) % 7 + offsetWeeks * 7);
+      const day = today.getDay();
+      const diff = day === 0 ? -6 : 1 - day;
+      monday.setDate(today.getDate() + diff + offsetWeeks * 7);
       const friday = new Date(monday);
       friday.setDate(monday.getDate() + 4);
       return { start: monday, end: friday };
@@ -315,4 +317,3 @@
   </script>
 </body>
 </html>
-
